Example-config-files/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: test-app
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app1
        image: nginx
        ports:
        - containerPort: 80
